RESOLVED FIXED212478
[ macOS Debug ] accessibility/roles-exposed.html is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=212478
Summary [ macOS Debug ] accessibility/roles-exposed.html is a flaky timeout
Andres Gonzalez
Reported 2020-05-28 10:47:57 PDT
[ macOS Debug ] accessibility/roles-exposed.html is a flaky timeout
Attachments
Patch (1.68 KB, patch)
2020-05-28 10:54 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-05-28 10:54:22 PDT
Andres Gonzalez
Comment 2 2020-05-28 11:00:09 PDT
EWS
Comment 3 2020-05-28 13:48:12 PDT
Committed r262257: <https://trac.webkit.org/changeset/262257> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400480 [details].
Note You need to log in before you can comment on or make changes to this bug.