[ macOS Debug ] accessibility/roles-exposed.html is a flaky timeout https://bugs.webkit.org/show_bug.cgi?id=212478 <rdar://problem/63411656>

Reviewed by Chris Fleizach.

Logging the backingObject in every call to accessibilityAttributeValue
seems to be causing this long test to take too long and timeout in slow
systems.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):


Canonical link: https://commits.webkit.org/225313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262257 268f45cc-cd09-0410-ab3c-d52691b4dbfc